--- a/cv_parsing.ipynb
+++ b/cv_parsing.ipynb
@@ -288,10 +288,10 @@
    "source": [
     "import requests\n",
     "\n",
-    "api_key = 'AIzaSyDAsS1PXOdPbA106KH_EtLVTkL6vNHA-uQ'\n",
+    "api_key = 'your google api key",
     "api_url = (\n",
-    "    'https://generativelanguage.googleapis.com/v1beta/models/'\n",
-    "    'gemini-2.0-flash:generateContent?key=' + api_key\n",
+    "    'your google api url"api_key\n",
+    "    
     ")\n",
     "\n",
     "def parse_cv(cv_text):\n",
